src/tests/benchmarks/SemanticErrors/declarationDeclarationMismatch3_RESULT.ll
@a = common global i32 0, align 4
@b = common global i32 0, align 4
@a = common global i32 0, align 4

; Function Attrs: noinline nounwind optnone ssp uwtable
define i32 @main() {
  %1 = alloca i32, align 4
  %2 = load i32, i32* %1, align 4
  ret i32 %2
}